--- a/app/src/main/res/layout/item_registration.xml
+++ b/app/src/main/res/layout/item_registration.xml
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:text="Hapus"
-            android:textColor="@color/error" />
+            android:textColor="@color/error_red" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
 
