--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,25 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Main color palette -->
+    <!-- Base colors -->
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
-    <color name="dark_blue">#0E4B63</color>
-    <color name="golden_brown">#D3C489</color>
-
-    <!-- Additional colors for states and feedback -->
+    <color name="gray">#808080</color>
+    <color name="dark_gray">#808080</color>
     <color name="light_gray">#F5F5F5</color>
-    <color name="medium_gray">#E0E0E0</color>
-    <color name="dark_gray">#757575</color>
-    <color name="error">#B00020</color>
-    <color name="success">#4CAF50</color>
-    <color name="warning">#FFC107</color>
-    <color name="info">#2196F3</color>
+    <color name="transparent">#00000000</color>
 
-    <!-- Legacy colors - kept for backward compatibility -->
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <!-- Primary color palette -->
+    <color name="dark_blue">#0E4B63</color>
+    <color name="dark_blue_light">#1A6A8C</color>
+    <color name="dark_blue_lighter">#2589B0</color>
+    <color name="dark_blue_dark">#0A3A4E</color>
+    <color name="dark_blue_darker">#072A39</color>
+
+    <!-- Secondary color palette -->
+    <color name="golden_brown">#D3C489</color>
+    <color name="golden_brown_light">#E0D5A6</color>
+    <color name="golden_brown_lighter">#EDE6C3</color>
+    <color name="golden_brown_dark">#B6A96F</color>
+    <color name="golden_brown_darker">#998E56</color>
+
+    <!-- Status colors -->
+    <color name="success_green">#4CAF50</color>
+    <color name="warning_orange">#FF9800</color>
+    <color name="error_red">#F44336</color>
+    <color name="info_blue">#2196F3</color>
+
+    <!-- Background colors -->
+    <color name="background_light">#F8F9FA</color>
+    <color name="card_background">#FFFFFF</color>
+
+    <!-- Icon background colors -->
+    <color name="icon_blue_bg">#E6F0FF</color>
+    <color name="icon_green_bg">#E6F9E6</color>
+    <color name="icon_purple_bg">#F2E6FF</color>
+    <color name="icon_yellow_bg">#FFF8E6</color>
 </resources>
 
