--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,92 +1,109 @@
 <resources>
-    <!-- Base application theme. -->
-    <style name="Theme.Sinoman" parent="Theme.MaterialComponents.Light.NoActionBar">
-        <!-- Primary brand color. -->
+    <!-- Base application theme -->
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="colorPrimary">@color/dark_blue</item>
-        <item name="colorPrimaryVariant">@color/dark_blue</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/golden_brown</item>
-        <item name="colorSecondaryVariant">@color/golden_brown</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
+        <item name="colorPrimaryDark">@color/dark_blue_dark</item>
+        <item name="colorAccent">@color/golden_brown</item>
+        <item name="android:windowBackground">@color/white</item>
         <item name="android:statusBarColor">@color/dark_blue</item>
-        <!-- Background colors -->
-        <item name="android:colorBackground">@color/white</item>
-        <item name="colorSurface">@color/white</item>
-        <item name="colorOnBackground">@color/black</item>
-        <item name="colorOnSurface">@color/black</item>
-        <!-- Text colors -->
+        <item name="android:navigationBarColor">@color/dark_blue</item>
         <item name="android:textColorPrimary">@color/black</item>
-        <item name="android:textColorSecondary">@color/dark_gray</item>
-        <!-- Component styles -->
-        <item name="materialButtonStyle">@style/Widget.Sinoman.Button</item>
-        <item name="textInputStyle">@style/Widget.Sinoman.TextInputLayout</item>
-        <item name="cardViewStyle">@style/Widget.Sinoman.CardView</item>
+        <item name="android:textColorSecondary">@color/gray</item>
+        <item name="bottomNavigationStyle">@style/Widget.Sinoman.BottomNavigation</item>
     </style>
 
-    <!-- Primary Button style -->
-    <style name="Widget.Sinoman.Button" parent="Widget.MaterialComponents.Button">
-        <item name="backgroundTint">@color/button_background_selector</item>
-        <item name="android:textColor">@color/button_text_selector</item>
-        <item name="cornerRadius">4dp</item>
-        <item name="android:paddingTop">12dp</item>
-        <item name="android:paddingBottom">12dp</item>
-        <item name="android:textAllCaps">false</item>
+    <!-- Toolbar style -->
+    <style name="Widget.Sinoman.Toolbar" parent="Widget.MaterialComponents.Toolbar">
+        <item name="android:background">@drawable/toolbar_gradient_background_enhanced</item>
+        <item name="titleTextColor">@color/white</item>
+        <item name="subtitleTextColor">@color/white</item>
+        <item name="colorControlNormal">@color/white</item>
+        <item name="android:elevation">@dimen/toolbar_elevation</item>
+        <item name="titleTextAppearance">@style/TextAppearance.Sinoman.Toolbar.Title</item>
+        <item name="contentInsetStartWithNavigation">@dimen/toolbar_title_margin_start</item>
+        <item name="android:paddingStart">@dimen/toolbar_padding_normal</item>
+        <item name="android:paddingEnd">@dimen/toolbar_padding_normal</item>
     </style>
 
-    <!-- Secondary Button style -->
-    <style name="Widget.Sinoman.Button.Secondary" parent="Widget.MaterialComponents.Button.OutlinedButton">
-        <item name="strokeColor">@color/outline_button_stroke_selector</item>
-        <item name="android:textColor">@color/outline_button_text_selector</item>
-        <item name="cornerRadius">4dp</item>
-        <item name="android:paddingTop">12dp</item>
-        <item name="android:paddingBottom">12dp</item>
-        <item name="android:textAllCaps">false</item>
+    <!-- Toolbar Title Text Appearance -->
+    <style name="TextAppearance.Sinoman.Toolbar.Title" parent="TextAppearance.MaterialComponents.Headline6">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:letterSpacing">0.02</item>
     </style>
 
-    <!-- Text Button style -->
-    <style name="Widget.Sinoman.Button.TextButton" parent="Widget.MaterialComponents.Button.TextButton">
-        <item name="android:textColor">@color/dark_blue</item>
-        <item name="android:textAllCaps">false</item>
-    </style>
-
-    <!-- Text Input Layout style -->
-    <style name="Widget.Sinoman.TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-        <item name="boxStrokeColor">@color/dark_blue</item>
-        <item name="hintTextColor">@color/dark_blue</item>
-        <item name="boxStrokeWidth">1dp</item>
+    <!-- Bottom Navigation style -->
+    <style name="Widget.Sinoman.BottomNavigation" parent="Widget.MaterialComponents.BottomNavigationView">
+        <item name="android:background">@color/golden_brown</item>
+        <item name="itemIconTint">@color/dark_blue</item>
+        <item name="itemTextColor">@color/dark_blue</item>
+        <item name="elevation">8dp</item>
     </style>
 
     <!-- Card style -->
     <style name="Widget.Sinoman.CardView" parent="Widget.MaterialComponents.CardView">
         <item name="cardBackgroundColor">@color/white</item>
-        <item name="cardElevation">0dp</item>
-        <item name="strokeColor">@color/dark_blue</item>
-        <item name="strokeWidth">1dp</item>
-        <item name="cardCornerRadius">4dp</item>
+        <item name="cardCornerRadius">12dp</item>
+        <item name="cardElevation">2dp</item>
+        <item name="contentPadding">0dp</item>
     </style>
 
-    <!-- Toolbar style -->
-    <style name="Widget.Sinoman.Toolbar" parent="Widget.MaterialComponents.Toolbar.Primary">
-        <item name="android:background">@color/dark_blue</item>
-        <item name="titleTextColor">@color/white</item>
+    <!-- Button style -->
+    <style name="Widget.Sinoman.Button" parent="Widget.MaterialComponents.Button">
+        <item name="android:textColor">@color/white</item>
+        <item name="backgroundTint">@color/button_background_selector</item>
+        <item name="android:paddingStart">16dp</item>
+        <item name="android:paddingEnd">16dp</item>
+        <item name="android:paddingTop">8dp</item>
+        <item name="android:paddingBottom">8dp</item>
+        <item name="cornerRadius">8dp</item>
     </style>
 
-    <!-- Bottom Navigation style -->
-    <style name="Widget.Sinoman.BottomNavigation" parent="Widget.MaterialComponents.BottomNavigationView">
-        <item name="android:background">@color/dark_blue</item>
-        <item name="itemIconTint">@color/white</item>
-        <item name="itemTextColor">@color/white</item>
+    <!-- Outline Button style -->
+    <style name="Widget.Sinoman.Button.OutlinedButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="android:textColor">@color/outline_button_text_selector</item>
+        <item name="strokeColor">@color/outline_button_stroke_selector</item>
+        <item name="android:paddingStart">16dp</item>
+        <item name="android:paddingEnd">16dp</item>
+        <item name="android:paddingTop">8dp</item>
+        <item name="android:paddingBottom">8dp</item>
+        <item name="cornerRadius">8dp</item>
+    </style>
+
+    <!-- Text Button style -->
+    <style name="Widget.Sinoman.Button.TextButton" parent="Widget.MaterialComponents.Button.TextButton">
+        <item name="android:textColor">@color/dark_blue</item>
+        <item name="rippleColor">@color/dark_blue_lighter</item>
+        <item name="android:paddingStart">8dp</item>
+        <item name="android:paddingEnd">8dp</item>
+        <item name="android:paddingTop">4dp</item>
+        <item name="android:paddingBottom">4dp</item>
+        <item name="android:minWidth">0dp</item>
+        <item name="android:minHeight">0dp</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <!-- Text Input style -->
+    <style name="Widget.Sinoman.TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="boxStrokeColor">@color/dark_blue</item>
+        <item name="hintTextColor">@color/dark_blue</item>
+    </style>
+
+    <!-- Theme.Sinoman is the main application theme -->
+    <style name="Theme.Sinoman" parent="AppTheme">
+        <!-- Status bar color that complements the gradient toolbar -->
+        <item name="android:statusBarColor">@color/dark_blue_dark</item>
+        <item name="android:windowLightStatusBar">false</item>
     </style>
 
     <!-- Spinner style -->
     <style name="Widget.Sinoman.Spinner" parent="Widget.AppCompat.Spinner">
         <item name="android:background">@drawable/spinner_background</item>
-        <item name="android:paddingTop">12dp</item>
-        <item name="android:paddingBottom">12dp</item>
         <item name="android:paddingStart">12dp</item>
         <item name="android:paddingEnd">12dp</item>
+        <item name="android:paddingTop">8dp</item>
+        <item name="android:paddingBottom">8dp</item>
     </style>
 </resources>
 
